objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Log to capture exceptions and errors, more general than the API-specific Sync Logs.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>