objects/Error_Log__c/fields/Delete_On__c.field-meta.xml
<CustomField>
    <fullName>Delete_On__c</fullName>
    <description>Notes the date on which this log should be deleted by the daily jobs.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes the date on which this log should be deleted by the daily jobs.</inlineHelpText>
    <label>Delete On</label>
    <type>Date</type>
</CustomField>