objects/Error_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Captures the error message</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures the error message</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>