objects/Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Contains the record id by which the error was caused, if applicable.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contains the record id by which the error was caused, if applicable.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>