objects/Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Captures the stack trace of the error</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures the stack trace of the error</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>